cmake_minimum_required(VERSION 3.10)

# Set the compiling mode flags
set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -DDEBUG")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG -s")

# Set the project name
project(ground_control)

# Include the current directory for header files
include_directories(include)

# Include additional libraries

# Add the executable
add_executable(ground_control
 src/main.c
)